--- a/starbear/bearstyle.css
+++ b/starbear/bearstyle.css
@@ -7,11 +7,11 @@
 }
 
 .bear--tabular-area-container {
-    min-width: 150px;
+    max-width: 700px;
     max-height: 80vh;
     padding: 5px;
     overflow: scroll;
-    white-space: pre;
+    white-space: pre-wrap;
     color: black;
     background: white;
     display: none;
