Fix style for bear controls

--- a/starbear/bearstyle.css
+++ b/starbear/bearstyle.css
@@ -1,7 +1,7 @@
 .bear--tabular {
     display: flex;
     flex-direction: row;
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     z-index: 1000;
